--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,1 +1,38 @@
-<h1>Travel-Friend</h1>
+<section class="section is-medium">
+  <div class="container block">
+    <div class="columns block">
+      <div class="column level has-text-centered">
+        <h1 class="title is-1">Travel Friend</h1>
+        <p class="block">Viaja con nosotros, con la comodidad que te mereces.</p>
+        <div class="level">
+          <div class="level-item has-text-centered columns">
+            <div class="column is-1">
+            <button class="button is-secondary is-vcentered">Contacto</button>
+            </div>            
+            <div class="column is-2">
+            <button class="button is-primary is-large">Nuestros viajes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="columns block">
+      <div class="column is-half is-offset-one-quarter">
+        <form class="box">
+          <div class="field">
+            <label class="label">Buscador de viajes</label>
+            <div class="control">
+              <input class="input" type="search" placeholder="Caracas">
+            </div>
+          </div>
+
+          <div class="level">
+            <div class="level-item has-text-centered">
+              <button class="button is-primary is-medium">Buscar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
