--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,18 +1,16 @@
 <section class="section is-medium">
   <div class="container block">
     <div class="columns block">
-      <div class="column level has-text-centered">
+      <div class="column has-text-centered">
         <h1 class="title is-1">Travel Friend</h1>
-        <p class="block">Viaja con nosotros, con la comodidad que te mereces.</p>
-        <div class="level">
-          <div class="level-item has-text-centered columns">
-            <div class="column is-1">
-            <button class="button is-secondary is-vcentered">Contacto</button>
-            </div>            
-            <div class="column is-2">
-            <button class="button is-primary is-large">Nuestros viajes</button>
-            </div>
-          </div>
+        <p class="block subtitle">Viaja con nosotros, con la comodidad que te mereces.</p>
+      </div>
+    </div>
+    <div class="level">
+      <div class="level-item has-text-centered">
+        <div class="buttons is-flex-wrap-nowrap">
+          <button class="button is-info is-outlined">Contacto</button>
+          <button class="button is-primary is-large"><strong>Nuestros viajes</strong></button>
         </div>
       </div>
     </div>
@@ -28,7 +26,7 @@
 
           <div class="level">
             <div class="level-item has-text-centered">
-              <button class="button is-primary is-medium">Buscar</button>
+              <button class="button is-primary is-medium is-outlined">Buscar</button>
             </div>
           </div>
         </form>
