--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-transparent" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="#">
     </a>
@@ -11,20 +11,22 @@
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">      
-    </div>
 
     <div class="navbar-end">
-      <a class="navbar-item">
-        Nosotros
+      <a class="navbar-item" href="/">
+        Home
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="/nosotros">
+        Quienes somos
+      </a>
+
+      <a class="navbar-item" href="/preguntas_frecuentes">
         Preguntas frecuentes
       </a>
 
-      <a class="navbar-item">
-        Otro link
+      <a class="navbar-item" href="/contacto">
+        Contacto
       </a>
       <div class="navbar-item">
         <div class="buttons">
