--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,18 +5,23 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+	{{!-- Icons!! --}}
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="bulma.css">
 	<title>Travel Friend</title>
 </head>
 
 <body>
-	{{>navbar}}
+	{{>navbar user=user}}
 
 	{{{body}}}
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	<script type="text/javascript" charset="utf8" src="fancyTable.min.js"></script>
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js" defer></script>
 
 	<script>
 		// Javascript for the page
